<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChandimaToDoList</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_detail">Task Detail</string>
    <string name="title_activity_new">New Task</string>
    <string name="title_activity_options">Options</string>
    <string name="title_options">Options</string>
    <string name="view_list">View List</string>
    <string name="save_task">Save Task</string>
    <string name="add_new">Add New</string>
    <string name="edit_task">Edit Task</string>
    <string name="options">Options</string>
    <string name="show_completed">Show Only Completed</string>
    <string name="email_tasks">Email Tasks</string>
    <string name="prompt_at_due_date">Prompt at Due Date</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="saveToFile">Save To File</string>
    <string name="id">ID</string>
    <string name="uuid">UUID</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="dueDate">Due Date</string>
    <string name="status">Status</string>
    <string name="description">Description</string>
    <string name="priority">Priority</string>
    <string name="no_title">No title entered !!!</string>
    <string name="no_category">No category selected !!!</string>
    <string name="no_dueDate">No due date entered !!!</string>
    <string name="no_status">No status selected !!!</string>
    <string name="no_description">No description enetered !!!</string>
    <string name="no_priority">No Priority specified !!!!</string>

    <string-array name="category">
        <item>Work</item>
        <item>Home</item>
        <item>School</item>
        <item>Personal</item>
    </string-array>
    <string-array name="priority">
        <item>Low</item>
        <item>Med</item>
        <item>High</item>
    </string-array>
    <string-array name="status">
        <item>Pending</item>
        <item>Completed</item>
    </string-array>

    <string name="title_activity_task_new">TaskNew</string>
    <string name="title_activity_task_detail">TaskDetail</string>

</resources>
