<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="42dp"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/no_title"
        android:text="" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dueDate" />

    <EditText
        android:id="@+id/editDueDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/no_dueDate" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:text="@string/priority" />

    <Spinner
        android:id="@+id/editPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/priority" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status" />

    <Spinner
        android:id="@+id/editStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/status" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category" />

    <Spinner
        android:id="@+id/editCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/category" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.75"
        android:ems="10"
        android:hint="@string/no_description" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickSave"
        android:text="@string/save_task" />

</LinearLayout>